tests/miniJava/neg/000115_mutation.MiniJava
class java { public length void Main ( String [ ] java ) { { } } }
